# knight-five

./: .gitignore  README.md  pyproject.toml
examples/: readme_example.py
notebooks/: intro.ipynb
src/game/: __init__.py  game.py
src/knight_five/: __init__.py  cli.py
src/knight_five/agent/: example_agent.py
src/knight_five/agent/ppo/: __init__.py  agent.py  run.py  train.py
src/knight_five/game/: game.py  game_example.py
src/knight_five/gym/: __init__.py  game.py  game_example.py
tests/: test_game.py
tests/game/: test_game.py
